--- a/config
+++ b/config
@@ -33,17 +33,6 @@ exec --no-startup-id nitrogen --restore
 new_window 1pixel
 # <normal|1pixel|none> 
 
-assign "transmission" 4
-assign "ktorrent" 4
-assign "firefox" 2
-assign "google-chrome" 2
-assign "google-chrome -incognito" 2
-assign "vlc" 3
-assign "mplayer2" 3
-assign "nvlc" 3
-assign "cvlc" 3
-assign "sublime" 5
-assign "gvim" 5
 
 ## Colours
 ##---------
@@ -131,6 +120,19 @@ bindsym $mod+Shift+egrave move container to workspace 7
 bindsym $mod+Shift+underscore move container to workspace 8
 bindsym $mod+Shift+ccedilla move container to workspace 9
 bindsym $mod+Shift+agrave move container to workspace 10
+
+# do xprop to know which name you should write on the class
+assign [class="^Transmission$"] → 4: Torrent
+assign [class="^ktorrent$"] → 4: Torrent
+assign [class="^Firefox$"] → 2: Web
+assign [class="^Google-chrome$"] → 2: Web
+assign [class="^Google-chrome -incognito$"] → 2: Web 
+assign [class="^vlc$"] → 3: Watch
+assign [class="^mplayer2$"] → 3: Watch
+assign [class="^nvlc$"] → 3: Watch
+assign [class="^cvlc$"] → 3: Watch
+assign [class="^sublime$"] → 5: Programming
+assign [class="^Gvim$"] → 5: Programming
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
