--- a/config
+++ b/config
@@ -1,4 +1,4 @@
-# i3 config file (v4.2)
+# i3 config file (v4.4-23-g1b6ea35)
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
